--- a/EpicSerializer/EpicSerializer.csproj
+++ b/EpicSerializer/EpicSerializer.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <PackageId>EpicSerializer</PackageId>
+    <Title>EpicSerializer</Title>
     <Authors>BiffJutsu</Authors>
     <Owners>BiffJutsu</Owners>
     <PackageVersion>1.0.0</PackageVersion>
-    <Description>Epic Chronicles Format Serializer</Description>
+    <Description>Epic Chronicles Serializer. Serialize arbitrary types into the Epic Chronicles format.</Description>
     <PackageLicenseUrl>https://mit-license.org/</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/BiffJutsu/EpicSerializer</PackageProjectUrl>
   </PropertyGroup>
